--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html>
 
 <head>
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>FFxivWasm</title>
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="FFxivWasm.styles.css" rel="stylesheet" />
 </head>
@@ -19,6 +19,8 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+    
+    <script src="bootstrap/js/bootstrap.bundle.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
